customer requires ver.1

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 /* -------- Same attribute-------- */
     body {margin:0px;}
     figure {
-      margin: 5px;
-      /* display: block; */
+      /* margin: 5px; */
+      display: block;
       /* border: 2px solid green; */
       margin: auto;
     }
@@ -33,17 +33,21 @@
     }
     #checkboxcase {
       /* margin: auto; */
+      /* border: 2px solid green; */
+      /* height: 20px; */
       margin-top: -10px;
+
     }
     #checkboxcase2 {
       /* margin: auto; */
       margin-top: -2px;
     }
     .checkbox {
+      margin-left: 89px;
+      position: relative;
       transform: scale(1.2);
-      width: 175px;
+      /* width: 75px; */
     }
-
 
     .head {
       width: 450px; margin: auto;
